# tutorial-hell

./: .gitignore  README.md
ArjanCodes/getting-started-with-dash/: main.py
ArjanCodes/getting-started-with-dash/part-1-and-2/: main.py
ArjanCodes/getting-started-with-dash/part-3/: main.py
ArjanCodes/ultimate-guide-to-functions/: before.py
ArjanCodes/ultimate-guide-to-functions/email_tools/: service.py  service_v2.py
DataTalksClub/Nikita-iserson/notebooks/: rev-notebook.ipynb
DataVerse/Lecture-1-Introduction-To-Langchain/: lecture-1-nb.ipynb
DataVerse/Lecture-2-models/: lecture-2.ipynb
FourthBrainAI/nlp-deployment-tutorial/: Dockerfile  Makefile  README.md  requirements.txt  setup.py
FourthBrainAI/nlp-deployment-tutorial/docs/: Makefile  conf.py  index.rst  make.bat
FourthBrainAI/nlp-deployment-tutorial/notebooks/: Untitled.ipynb  dialo-medium-test-run.ipynb  notebook-1.ipynb
FourthBrainAI/nlp-deployment-tutorial/src/: app.py
PyTorch-BigGraph-Tutorial/: pyproject.toml
PyTorch-BigGraph-Tutorial/notebooks/: medium-tutorial.ipynb
abhishek-thakur/yolov8/: notebook-1.ipynb
dgl-tutorial/dgl-1.1-documentation/: 1-Graph-Basics.ipynb  2-Message-Passing.ipynb  3-Building-GNN-Modules.ipynb  4-Graph-Data-Pipeline.ipynb  5-Training-GNNs.ipynb
sebastian-raschka/: pyproject.toml
sebastian-raschka/ml-with-pytorch-sklearn/: ch-6-video-code.ipynb  ch-6-videos.md  ch-7-video-code.ipynb
sebastian-raschka/ml-with-pytorch-sklearn/notebooks/: ch-3-code.ipynb  chapter-1-2-NB.ipynb
statquest/xgboost-demo/: xgboost-demo.ipynb
(+32 files in other folders)
