[tool.poetry]
name = "pytorch-biggraph"
version = "0.1.0"
description = ""
authors = ["Dylan Loader <dylanloader@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_biggraph"}]

[tool.poetry.dependencies]
python = "^3.09"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
torch = "^2.0.0"
ipykernel = "^6.22.0"
dgl = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
