[tool.poetry]
name = "sebastian-raschka"
version = "0.1.0"
description = ""
authors = ["Dylan Loader <dylanloader@gmail.com>"]
readme = "README.md"
packages = [{include = "sebastian_raschka"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
torch = "^2.0.0"
torchvision = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
